--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="apple-mobile-web-app-title" content="Techsnap">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="theme-color" content="#FFFFFF">
+    <link rel="apple-touch-icon" href="/faviconmobile.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/faviconmobile-highres.png">
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" type="image/png" href="/faviconmobile.png" />
+    <link rel="apple-touch-startup-image" sizes="750x1334" href="/faviconmobile.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no viewport-fit=cover">
     <title>Vite + React</title>
   </head>
   <body>
