--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/png" href="/faviconmobile.png" />
     <link rel="apple-touch-startup-image" sizes="750x1334" href="/faviconmobile.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no viewport-fit=cover">
-    <title>Vite + React</title>
+    <title>Techsnap</title>
   </head>
   <body>
     <div id="root"></div>
