--- a/index.html
+++ b/index.html
@@ -1,19 +1,83 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="apple-mobile-web-app-title" content="Techsnap">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="theme-color" content="#FFFFFF">
-    <link rel="apple-touch-icon" href="/faviconmobile.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/faviconmobile-highres.png">
-    <link rel="manifest" href="/manifest.json" />
-    <link rel="icon" type="image/png" href="/faviconmobile.png" />
-    <link rel="apple-touch-startup-image" sizes="750x1334" href="/faviconmobile.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no viewport-fit=cover">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"
+    />
+    <meta name="description" content="An EdTech company provifing great learning" />
+    <meta name="keywords" content="Keywords" />
     <title>Techsnap</title>
+    <meta name="theme-color" content="red" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="Application Title" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="msapplication-navbutton-color" content="red" />
+    <meta name="msapplication-TileColor" content="red" />
+    <meta name="msapplication-TileImage" content="ms-icon-144x144.png" />
+    <meta name="msapplication-config" content="browserconfig.xml" />
+    <meta name="application-name" content="Application Name" />
+    <meta name="msapplication-tooltip" content="Tooltip Text" />
+    <meta name="msapplication-starturl" content="/" />
+    <meta name="msapplication-tap-highlight" content="no" />
+    <meta name="full-screen" content="yes" />
+    <meta name="browsermode" content="application" />
+    <meta name="nightmode" content="enable/disable" />
+    <meta name="viewport" content="uc-fitscreen=yes" />
+    <meta name="layoutmode" content="fitscreen/standard" />
+    <meta name="imagemode" content="force" />
+    <meta name="screen-orientation" content="portrait" />
+    <link
+      href="/public/faviconmobile.png"
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+    />
+    <link
+      href="/public/faviconmobile.png"
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+    />
+    <link
+      href="/public/faviconmobile.png"
+      rel="icon"
+      type="image/png"
+      sizes="48x48"
+    />
+    <link href="/public/faviconmobile.png" rel="apple-touch-icon" />
+    <link
+      href="/public/faviconmobile.png"
+      rel="apple-touch-icon"
+      sizes="76x76"
+    />
+    <link
+      href="/public/faviconmobile.png"
+      rel="apple-touch-icon"
+      sizes="120x120"
+    />
+    <link
+      href="/public/faviconmobile.png"
+      rel="apple-touch-icon"
+      sizes="152x152"
+    />
+    <link href="/public/faviconmobile.pngg" rel="apple-touch-startup-image" />
+    <link href="/public/faviconmobile.png" rel="icon" sizes="192x192" />
+    <link href="/public/faviconmobile.png" rel="icon" sizes="128x128" />
+    <link
+      href="/public/faviconmobile.png"
+      rel="apple-touch-icon-precomposed"
+      sizes="57x57"
+    />
+    <link
+      href="/public/faviconmobile.png"
+      rel="apple-touch-icon"
+      sizes="72x72"
+    />
+    <link href="/manifest.json" rel="manifest" />
   </head>
   <body>
     <div id="root"></div>
