--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
       name="viewport"
       content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"
     />
-    <meta name="description" content="An EdTech company provifing great learning" />
+    <meta
+      name="description"
+      content="An EdTech company providing great learning"
+    />
     <meta name="keywords" content="Keywords" />
     <title>Techsnap</title>
     <meta name="theme-color" content="red" />
@@ -25,58 +28,24 @@
     <meta name="msapplication-tap-highlight" content="no" />
     <meta name="full-screen" content="yes" />
     <meta name="browsermode" content="application" />
-    <meta name="nightmode" content="enable/disable" />
-    <meta name="viewport" content="uc-fitscreen=yes" />
-    <meta name="layoutmode" content="fitscreen/standard" />
     <meta name="imagemode" content="force" />
     <meta name="screen-orientation" content="portrait" />
+    <link href="/faviconmobile.png" rel="icon" type="image/png" sizes="16x16" />
+    <link href="/faviconmobile.png" rel="icon" type="image/png" sizes="32x32" />
+    <link href="/faviconmobile.png" rel="icon" type="image/png" sizes="48x48" />
+    <link href="/faviconmobile.png" rel="apple-touch-icon" />
+    <link href="/faviconmobile.png" rel="apple-touch-icon" sizes="76x76" />
+    <link href="/faviconmobile.png" rel="apple-touch-icon" sizes="120x120" />
+    <link href="/faviconmobile.png" rel="apple-touch-icon" sizes="152x152" />
+    <link href="/faviconmobile.png" rel="apple-touch-startup-image" />
+    <link href="/faviconmobile.png" rel="icon" sizes="192x192" />
+    <link href="/faviconmobile.png" rel="icon" sizes="128x128" />
     <link
-      href="/public/faviconmobile.png"
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-    />
-    <link
-      href="/public/faviconmobile.png"
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-    />
-    <link
-      href="/public/faviconmobile.png"
-      rel="icon"
-      type="image/png"
-      sizes="48x48"
-    />
-    <link href="/public/faviconmobile.png" rel="apple-touch-icon" />
-    <link
-      href="/public/faviconmobile.png"
-      rel="apple-touch-icon"
-      sizes="76x76"
-    />
-    <link
-      href="/public/faviconmobile.png"
-      rel="apple-touch-icon"
-      sizes="120x120"
-    />
-    <link
-      href="/public/faviconmobile.png"
-      rel="apple-touch-icon"
-      sizes="152x152"
-    />
-    <link href="/public/faviconmobile.pngg" rel="apple-touch-startup-image" />
-    <link href="/public/faviconmobile.png" rel="icon" sizes="192x192" />
-    <link href="/public/faviconmobile.png" rel="icon" sizes="128x128" />
-    <link
-      href="/public/faviconmobile.png"
+      href="/faviconmobile.png"
       rel="apple-touch-icon-precomposed"
       sizes="57x57"
     />
-    <link
-      href="/public/faviconmobile.png"
-      rel="apple-touch-icon"
-      sizes="72x72"
-    />
+    <link href="/faviconmobile.png" rel="apple-touch-icon" sizes="72x72" />
     <link href="/manifest.json" rel="manifest" />
   </head>
   <body>
