--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
     <meta name="apple-mobile-web-app-title" content="Application Title" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="msapplication-navbutton-color" content="red" />
-    <meta name="msapplication-TileColor" content="red" />
-    <meta name="msapplication-TileImage" content="ms-icon-144x144.png" />
+    <meta name="msapplication-TileImage" content="/faviconmobile.png" />
     <meta name="msapplication-config" content="browserconfig.xml" />
     <meta name="application-name" content="Application Name" />
     <meta name="msapplication-tooltip" content="Tooltip Text" />
